tests/cn/copy_alloc_id2.error.c.expected
return code: 1
[1/2]: f -- fail
[2/2]: main -- pass
tests/cn/copy_alloc_id2.error.c:10:12: error: Pointer `p` needs to be live for copy_alloc_id
  int* q = __cerbvar_copy_alloc_id(p_int + 0ULL, p);
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
Need an Alloc or Owned in context with same allocation id
State file: file:///tmp/state__copy_alloc_id2.error.c__f.html
